change names and emails correctly

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
   ],
   "ignorePatterns": ["*/public", "*/node_modules/*", "*/.next/*", "*/dist/*"],
   "rules": {
-    "react/display-problemsolver": "off",
+    "react/display-name": "off",
     // The next two rules should be errors. But for now we"ll leave them as warnings since this will take a while
     "react-memo/require-usememo": "error",
     "react-memo/require-memo": "error",
