--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "problemsolver": "react-resume-template",
+  "name": "react-resume-template",
   "version": "2.0.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.16",
-    "classproblemsolvers": "^2.3.2",
+    "classnames": "^2.3.2",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
